--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"  
+    "express": "^4.16.4",
     "phaser": "^3.15.1",
-    
     "socket.io": "^2.1.1"
- 
   }
 }
